logo added as home

--- a/src/Header.css
+++ b/src/Header.css
@@ -1,17 +1,16 @@
 .header {
-    display: flex;
-    justify-content: center;
-    gap: 50px;
-  }
+  display: flex;
+  justify-content: center;
+  gap: 150px;
+  margin-top: 30px;
 
-  .searchbar {
-    margin: 30px;
-  }
+}
 
-  .menu-items {
-    display: flex;
-    gap: 20px;
-    font-size: x-small;
-    margin: 20px;
-   
-  }
+.menu-items {
+  display: flex;
+  gap: 20px;
+  font-size: x-small;
+  margin: 20px;
+ 
+}
+
