--- a/src/Home.css
+++ b/src/Home.css
@@ -1,5 +1,23 @@
 .home-page {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-gap: 10px;
+    grid-template-columns: repeat(4, 1fr);
+  
 }
+
+@media screen and (max-width: 1260px) {
+    .home-page {
+      grid-template-columns: repeat(3, 1fr); 
+    }
+  }
+
+  @media screen and (max-width: 980px) {
+    .home-page {
+      grid-template-columns: repeat(2, 1fr); 
+    }
+  }
+
+  @media screen and (max-width: 650px) {
+    .home-page {
+      grid-template-columns: repeat(1, 1fr); 
+    }
+  }
